# project1_Sysoev_Arseniy_M25-555

./: .gitignore  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
