[tool.poetry]
name = "project1-sysoev-arseniy-m25-555"
version = "3.12.3"
description = "1"
authors = ["Sysoev Asreniy"]
packages = [
    { include = "labyrinth_game" },
]
license = "1"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
